[package]
name = "criterion-perf-events"
version = "0.4.0"
authors = ["Jens Breitbart <jbreitbart@gmail.com>"]
edition = "2018"
description = "Measure perf events for criterion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbreitbart/criterion-perf-events"
readme = "README.md"
rust-version = "1.64"

exclude = [".gitignore", ".vscode/*", ".github/*"]

[dependencies]
criterion = "0.6.0"

[dependencies.perfcnt]
git = "https://github.com/ticketmaster/rust-perfcnt"
rev = "667176423b770c3c8eb1eadaabebdae1c6281933"
#perfcnt = "0.8.1"

[[bench]]
path = "examples/fibo_bench.rs"
name = "fibo_bench"
harness = false
